fixed alignment

--- a/src/App.css
+++ b/src/App.css
@@ -65,7 +65,7 @@ body{
   margin-top: 14.1%;
   width: 246px;
   height: 254px;
-  left: 9.1%;
+  /* left: 9.1%; */
   /* top: 29.7%; */
 
   /* background-image: url('./assets/images/Group\ 2.png'); */
