--- a/src/component/meters/meter.css
+++ b/src/component/meters/meter.css
@@ -31,17 +31,17 @@ body {
     transform: rotate(0deg);
 }
 .display2{
-    margin-top: 10% !important;
+    margin-top: 9.4% !important;
     margin-left: 9% !important;
 }
 .display img {
     width: 100%;
 }
 
-/* .display3{
-    margin-top: 14.1% !important;
+.display3{
+    margin-top: 9.4% !important;
     margin-left: 9% !important;
-} */
+}
 
 .heading {
     position: absolute;
