--- a/src/component/tabs/tabs.css
+++ b/src/component/tabs/tabs.css
@@ -15,7 +15,8 @@ body {
     height: 254px;
     left: 9.1%;
     /* top: 29.7%; */
-    margin-top: 9.5% !important;
+    /* margin-top: 9.5% !important; */
+    margin-top: 9% !important;
 
     /* background-image: url('./assets/images/Group\ 2.png'); */
     background-repeat: no-repeat;
