--- a/src/component/video/videoplay.css
+++ b/src/component/video/videoplay.css
@@ -9,18 +9,19 @@
     display:block !important
 }
 .display {
-    /* width: 18%;
+    width: 18%;
     height: 62%;
-    left: 10.1%;
- 
-    margin-top: 15.8%; */
+    /* left: 10.1%; */
+    margin-top: 14.1%;
+    /* left: 9.1%; */
+    margin-left: 8.3%;
     /* width: 246px;
     height: 244px;
     left: 9%;
     top: 29.2%; */
     /* width: 246px;
     height: 254px; */
-    width: 16%;
+    width: 17%;
     height: 35%;
     left: 9.1%;
     margin-top: 11.22%;
@@ -31,9 +32,10 @@
 }
 
     .displayVid {
-        margin-top: 11%;
+        margin-top: 14.1%;
+        /* margin-top: 13.3%;
         left: 9.1%;
-        margin-left: 8.6%;
+        margin-left: 8.6%; */
     }
 
 
@@ -253,6 +255,7 @@
     top: -13%;
 }
 
+
 .background-image-container {
     width: 100%;
     height: 100vh;
@@ -263,9 +266,9 @@
     position: relative;
 }
 .image-button{
-    /* background-color: transparent;
+    background-color: transparent;
     color: transparent;
-    border:0; */
+    border:0;
 }
 .background-image-container img {
     max-width: 100%;
